# cca-coserv-demo

./: .gitignore  Cargo.toml  README.md  deny.toml
src/: error.rs  main.rs  query.rs  store.rs  verify.rs
test/: coserv_rv_result.cbor  coserv_ta_result.cbor
